--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
     "minimum-stability": "stable",
     "require": {
         "symfony/console": "^5.3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9"
     }
 }
